[gd_scene load_steps=3 format=3 uid="uid://cslnphk10k46d"]

[ext_resource type="PackedScene" uid="uid://c0c5uueyrmmcq" path="res://src/ui/components/close_button/close_button.tscn" id="1_5roqh"]
[ext_resource type="Script" uid="uid://75uiw81bay38" path="res://src/ui/screens/cannery/cannery_screen.gd" id="1_cxpxi"]

[node name="CanneryScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxpxi")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="CloseButton" parent="Control" instance=ExtResource("1_5roqh")]
layout_mode = 1
offset_left = -40.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 40.0

[node name="ProcessPanel" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 110.0
offset_right = 300.0
offset_bottom = 370.0
theme_override_constants/separation = 8

[node name="PrepGroup" type="VBoxContainer" parent="Control/ProcessPanel"]
layout_mode = 2

[node name="PrepLabel" type="Label" parent="Control/ProcessPanel/PrepGroup"]
layout_mode = 2
text = "Prep (max 2)"

[node name="PrepList" type="VBoxContainer" parent="Control/ProcessPanel/PrepGroup"]
layout_mode = 2

[node name="TransformGroup" type="VBoxContainer" parent="Control/ProcessPanel"]
layout_mode = 2

[node name="TransformLabel" type="Label" parent="Control/ProcessPanel/TransformGroup"]
layout_mode = 2
text = "Transform (max 1)"

[node name="TransformList" type="VBoxContainer" parent="Control/ProcessPanel/TransformGroup"]
layout_mode = 2

[node name="HeatGroup" type="VBoxContainer" parent="Control/ProcessPanel"]
layout_mode = 2

[node name="HeatLabel" type="Label" parent="Control/ProcessPanel/HeatGroup"]
layout_mode = 2
text = "Heat (optional)"

[node name="HeatList" type="VBoxContainer" parent="Control/ProcessPanel/HeatGroup"]
layout_mode = 2

[node name="PreserveGroup" type="VBoxContainer" parent="Control/ProcessPanel"]
layout_mode = 2

[node name="PreserveLabel" type="Label" parent="Control/ProcessPanel/PreserveGroup"]
layout_mode = 2
text = "Preserve (optional)"

[node name="PreserveList" type="VBoxContainer" parent="Control/ProcessPanel/PreserveGroup"]
layout_mode = 2

[node name="FinishLabel" type="Label" parent="Control/ProcessPanel"]
layout_mode = 2
text = "Finish: Pack + Seal"

[node name="MakeTinButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 620.0
offset_top = 289.0
offset_right = 780.0
offset_bottom = 365.0
text = "Make tin"

[node name="MakeTinProgress" type="ProgressBar" parent="Control/MakeTinButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
value = 1.0
max_value = 1.0
mouse_filter = 2
show_percentage = false

[node name="MethodLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 140.0
offset_right = 460.0
offset_bottom = 160.0
text = "Method"

[node name="MethodSelect" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 165.0
offset_right = 560.0
offset_bottom = 195.0

[node name="IngredientLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 210.0
offset_right = 460.0
offset_bottom = 230.0
text = "Ingredient"

[node name="IngredientSelect" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 235.0
offset_right = 560.0
offset_bottom = 265.0

[node name="GarlicCountLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 270.0
offset_right = 560.0
offset_bottom = 290.0
text = "Garlic: 0"

[node name="LastMadeLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 340.0
offset_top = 295.0
offset_right = 560.0
offset_bottom = 315.0
text = ""

[connection signal="close_requested" from="Control/CloseButton" to="." method="_on_close_button_close_requested"]
[connection signal="pressed" from="Control/MakeTinButton" to="." method="_on_make_tin_button_pressed"]
